--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
     <li onclick="setBgc('#15202B')">深蓝</li>
   </ul>
   <script>
+    alert('请在全屏模式下测试');
+
     function setBgc(color) {
       document.body.style.backgroundColor = color;
     }
